# vrased

./: .gitignore  CMakeLists.txt  README.md  result.txt
.github/workflows/: ci.yaml
application/: hardware.h  main.c
application/simulation/: sim.v
msp_bin/: .gitignore  README.md  README.md~  pmem.mem  smem.mem
openmsp430/contraints_fpga/: Basys-3-Master.xdc
openmsp430/fpga/: openMSP430_fpga.v
openmsp430/msp_core/: .gitignore  CMakeLists.txt  driver_7segment.v  omsp_clock_module.v  omsp_frontend.v  omsp_mem_backbone.v  omsp_mem_backbone_unmodif.v  openMSP430.v  openMSP430_defines.v  vrased-config.v.in
openmsp430/msp_memory/: keyrom.v  pmem.v  ram.v  rom.v
openmsp430/msp_periph/: attacker.v
openmsp430/simulation/: .gitignore  dma_tasks.v  stimulus.v  tb_openMSP430.v  tb_openMSP430_fpga.v
scripts/: .gitignore  A-1-register-leak.sh  B-1-dma-translation.sh  B-2-key-size.sh  C-2-stack-pointer.sh  C-3-auth-timing.sh  C-4-nemesis.sh  C-5-dma-sc.sh  D-hw-mod-proof.sh  D-soundness-and-security-proof.sh  attack-dma-ac.sh  attack-dma-sc.sh  attack-nemesis.sh  attack-stack.sh  ci_wrapper.sh  makefile  pmem.mem  simv  stack_size.py  tmp.txt
scripts/tmp-build/: hacl_mac.lib  linker.msp430.x  main.c~  pmem.def  pmem.inc  vrased.a43  vrased.elf  vrased.lst  vrased.size  wrapper.c
scripts/verif-tools/: hw-auth-verify  run  run~  verilog2smv-1.1.2.tar.bz2  verilog2smv.sh
swatt-init/: Makefile  README.md  swatt-init.c
verification_specs/: .gitignore  CMakeLists.txt  ltl_specs.smv  ltl_specs.smv~  vrased-config.smv.in
verification_specs/pure_PoR_proofs/: PoR_lemma1.ltl  README.md
vrased/hw-mod/: AC.v  (+10 more)
(+69 files in other folders)
